--- a/Zad1.vcxproj
+++ b/Zad1.vcxproj
@@ -127,11 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Wektory.cpp" />
+    <ClCompile Include="Wektory2D.cpp" />
+    <ClCompile Include="Wektory3D.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Wektory.h" />
+    <ClInclude Include="Wektory2D.h" />
+    <ClInclude Include="Wektory3D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
