--- a/Zad1.vcxproj
+++ b/Zad1.vcxproj
@@ -127,12 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Kwateriony.cpp" />
     <ClCompile Include="Macierz.cpp" />
     <ClCompile Include="Wektory2D.cpp" />
     <ClCompile Include="Wektory3D.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Kwateriony.h" />
     <ClInclude Include="Macierz.h" />
     <ClInclude Include="Wektory2D.h" />
     <ClInclude Include="Wektory3D.h" />
